--- a/recipe-page.css
+++ b/recipe-page.css
@@ -1,12 +1,34 @@
+html {
+    box-sizing: border-box;
+}
+
+* {
+    box-sizing: inherit;
+}
+
+.box {
+    border: 5px solid black;
+    margin: 150px;
+    padding: 40px;
+    background-color: lightgrey;
+    
+}
+
 h1 {
     background-color: blueviolet;
     color: black;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
 }
 
 li {
     color: blueviolet;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    text-align: center;
+    list-style-type: none;
 }
